--- a/application/build.gradle
+++ b/application/build.gradle
@@ -1,5 +1,3 @@
-apply plugin: 'com.android.application'
-
 rootProject.applicationModulePlugins.each {
     apply plugin: it
 }
@@ -21,6 +19,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions{
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
+    }
     lintOptions {
         abortOnError true
         textReport true
@@ -39,6 +41,10 @@ android {
             java.srcDirs = ['src/androidTest/kotlin']
         }
     }
+}
+
+kapt {
+    generateStubs = true
 }
 
 dependencies {
