--- a/dataproviders/build.gradle
+++ b/dataproviders/build.gradle
@@ -1,5 +1,3 @@
-apply plugin: 'com.android.library'
-
 rootProject.dataprovidersModulePlugins.each {
     apply plugin: it
 }
@@ -20,6 +18,10 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    compileOptions{
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
     }
     lintOptions {
         abortOnError true
