--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,9 @@ before_install:
 - chmod +x gradlew
 env:
   global:
-   - ANDROID_API_LEVEL=24
+   - ANDROID_API_LEVEL=25
    - EMULATOR_API_LEVEL=21
-   - ANDROID_BUILD_TOOLS_VERSION=24.0.1
+   - ANDROID_BUILD_TOOLS_VERSION=25.0.3
    - ANDROID_ABI=google_apis/armeabi-v7a
    - ADB_INSTALL_TIMEOUT=8 # minutes (2 minutes by default)
 android:
@@ -25,7 +25,7 @@ android:
     - extra-android-m2repository
 
     # Google Play Services
-    - extra-google-google_play_services
+#    - extra-google-google_play_services
     # Support library
     - extra-android-support
 
@@ -40,10 +40,10 @@ android:
 #    - sys-img-armeabi-v7a-android-21
 #    - sys-img-armeabi-v7a-android-19
 
-  licenses:
-    - 'android-sdk-preview-license-52d11cd2'
-    - 'android-sdk-license-.+'
-    - 'google-gdk-license-.+'
+#  licenses:
+#    - 'android-sdk-preview-license-52d11cd2'
+#    - 'android-sdk-license-.+'
+#    - 'google-gdk-license-.+'
 before_script:
     - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
     - emulator -avd test -no-skin -no-audio -no-window &
