--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,5 @@ org.gradle.jvmargs=-Xmx3072m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryErro
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 org.gradle.parallel=true
 org.gradle.configureondemand=true
+USERNAME_EPISODIE_API="YOUR API USERNAME"
+PASSWORD_EPISODIE_API="YOUR API PASSWORD"
