--- a/application/build.gradle
+++ b/application/build.gradle
@@ -19,6 +19,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    buildTypes.each {
+        it.buildConfigField('String', 'USERNAME_EPISODIE_API', USERNAME_EPISODIE_API)
+        it.buildConfigField('String', 'PASSWORD_EPISODIE_API', PASSWORD_EPISODIE_API)
+    }
     compileOptions{
         sourceCompatibility JavaVersion.VERSION_1_7
         targetCompatibility JavaVersion.VERSION_1_7
