--- a/application/src/main/AndroidManifest.xml
+++ b/application/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:supportsRtl="true"
         android:theme="@style/BaseEpisodieTheme">
 
-        <activity android:name=".MainActivity">
+        <activity android:name=".ui.mainfeed.MainFeedActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
