--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,7 +1,7 @@
 ext {
     android = [
-            compileSdkVersion: 25,
-            buildToolsVersion: "25.0.3",
+            compileSdkVersion: 26,
+            buildToolsVersion: "26.0.0",
             minSdkVersion    : 17,
             targetSdkVersion : 25,
             versionCode      : 1,
@@ -22,7 +22,7 @@ ext {
     ]
 
     /* dependency version */
-    def androidSupportLibs = '25.3.1'
+    def androidSupportLibs = '26.0.0-beta2'
     def constraintLayoutVersion = '1.0.2'
     def jUnitVersion = '4.12'
     def espressoVersion = '2.2.2'
@@ -46,7 +46,7 @@ ext {
     def rippleVersion = '1.3'
     def calligraphyVersion = '2.3.0'
     def multiSectionVersion = 'v0.1'
-    def navigationTabBarVersion = '1.2.5'
+    def navigationTabBarVersion = '2.3.1'
     def slidingRootNavVersion = '1.0.2'
     def rxCacheVersion = '1.8.0-2.x'
     def jolyglotGsonVersion = '0.0.3'
@@ -91,7 +91,7 @@ ext {
             ripple                 : [group: 'com.github.traex.rippleeffect', name: 'library', version: rippleVersion],
             calligraphy            : [group: 'uk.co.chrisjenx', name: 'calligraphy', version: calligraphyVersion],
             multiSection           : [group: 'com.github.yalantis', name: 'multi-selection', version: multiSectionVersion],
-            navigationTabBar       : [group: 'devlight.io', name: 'navigationtabbar', version: navigationTabBarVersion],
+            navigationTabBar       : [group: 'com.roughike', name: 'bottom-bar', version: navigationTabBarVersion],
             slidingRootNav         : [group: 'com.yarolegovich', name: 'sliding-root-nav', version: slidingRootNavVersion],
     ]
 
