--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -10,8 +10,8 @@ ext {
 
     /* build plugins versions */
     build = [
-            gradle: "3.0.0-alpha4",
-            kotlin: "1.1.2-5",
+            gradle: "3.0.0-alpha5",
+            kotlin: "1.1.3",
             groovy: "1.1.0"
     ]
 
@@ -42,7 +42,7 @@ ext {
     def stethoOkHttpVersion = "1.5.0"
     def extensiblePageIndicatorVersion = '1.0.1'
     def butterKnifeVersion = '8.6.0'
-    def glideVersion = '4.0.0-RC0'
+    def glideVersion = '4.0.0-RC1'
     def rippleVersion = '1.3'
     def calligraphyVersion = '2.3.0'
     def multiSectionVersion = 'v0.1'
@@ -142,7 +142,7 @@ ext {
             [configuration: "implementation", dependency: libs.multiSection],
             [configuration: "implementation", dependency: libs.slidingRootNav],
             [configuration: "implementation", dependency: libs.androidAnimations],
-            [configuration: "annotationProcessor", dependency: libs.glideCompiler],
+            [configuration: "kapt", dependency: libs.glideCompiler],
             [configuration: "implementation", dependency: libs.particlesDrawable],
             // dependency injection
             [configuration: "implementation", dependency: libs.butterKnife],
