--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -1,5 +1,6 @@
 rootProject.presentationModulePlugins.each {
     apply plugin: it
+
 }
 
 sourceCompatibility = "1.7"
@@ -7,10 +8,10 @@ targetCompatibility = "1.7"
 
 sourceSets {
     main {
-        java.srcDirs += 'src/main/kotlin'
+        java.srcDirs = ['src/main/kotlin']
     }
     test {
-        groovy.srcDirs = ['src/test/groovy']
+        java.srcDirs = ['src/test/kotlin']
     }
 }
 
