--- a/application/build.gradle
+++ b/application/build.gradle
@@ -40,7 +40,7 @@ android {
             java.srcDirs += 'src/main/kotlin'
         }
         test {
-            java.srcDirs = ['src/test/groovy']
+            java.srcDirs = ['src/test/kotlin']
         }
         androidTest {
             java.srcDirs = ['src/androidTest/kotlin']
