--- a/dataproviders/build.gradle
+++ b/dataproviders/build.gradle
@@ -35,7 +35,7 @@ android {
             java.srcDirs += 'src/main/kotlin'
         }
         test {
-            java.srcDirs = ['src/test/groovy']
+            java.srcDirs = ['src/test/kotlin']
         }
         androidTest {
             java.srcDirs = ['src/androidTest/kotlin']
