Add: gradle task

--- a/build.gradle
+++ b/build.gradle
@@ -14,11 +14,13 @@ allprojects {
     repositories {
         jcenter()
         maven { url 'https://maven.google.com' }
+
         mavenCentral()
     }
 }
 
 subprojects {
+    //    Detek
     def detekVersion = "1.0.0.M10.2"
     repositories {
         mavenCentral()
@@ -41,6 +43,11 @@ subprojects {
         def rulesets = " "
         def params = ['-p', input, '-c', config, '-f', filters, '-r', rulesets]
         args(params)
+    }
+    // Tests copy
+    task copyTestClasses(type: Copy) {
+        from "build/tmp/kotlin-classes/debugUnitTest"
+        into "build/intermediates/classes/debug"
     }
 }
 
