--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,7 +1,7 @@
 ext {
     android = [
             compileSdkVersion: 26,
-            buildToolsVersion: "26.0.0",
+            buildToolsVersion: "26.0.1",
             minSdkVersion    : 17,
             targetSdkVersion : 25,
             versionCode      : 1,
@@ -10,7 +10,7 @@ ext {
 
     /* build plugins versions */
     build = [
-            gradle: "3.0.0-alpha7",
+            gradle: "3.0.0-beta2",
             kotlin: "1.1.3-2",
     ]
 
@@ -41,7 +41,7 @@ ext {
     def extensiblePageIndicatorVersion = '1.0.1'
     def butterKnifeVersion = '8.6.0'
     def glideVersion = '4.0.0-RC1'
-    def rippleVersion = '1.3'
+    def rippleVersion = '1.3.1'
     def calligraphyVersion = '2.3.0'
     def multiSectionVersion = 'v0.1'
     def slidingRootNavVersion = '1.0.2'
@@ -51,6 +51,8 @@ ext {
     def architectureComponentsVersion = '1.0.0-alpha3'
     def particlesDrawableVersion = '1.0.7'
     def lottieVersion = '2.0.0'
+    def groupieVersion = '2.0.0-alpha2'
+    def noiseViewVersion = '1.0'
 
     def libs = [
             /* support */
@@ -92,12 +94,14 @@ ext {
             /* frontend */
             glide                  : [group: 'com.github.bumptech.glide', name: 'glide', version: glideVersion],
             glideCompiler          : [group: 'com.github.bumptech.glide', name: 'compiler', version: glideVersion],
-            ripple                 : [group: 'com.github.traex.rippleeffect', name: 'library', version: rippleVersion],
+            ripple                 : [group: 'com.patrickpissurno', name: 'ripple-effect', version: rippleVersion],
             calligraphy            : [group: 'uk.co.chrisjenx', name: 'calligraphy', version: calligraphyVersion],
             multiSection           : [group: 'com.github.yalantis', name: 'multi-selection', version: multiSectionVersion],
             slidingRootNav         : [group: 'com.yarolegovich', name: 'sliding-root-nav', version: slidingRootNavVersion],
             particlesDrawable      : [group: 'com.github.doctoror.particlesdrawable', name: 'library', version: particlesDrawableVersion],
             lottie                 : [group: 'com.airbnb.android', name: 'lottie', version: lottieVersion],
+            groupie                : [group: 'com.xwray', name: 'groupie', version: groupieVersion],
+            noiseView              : [group: 'pl.hypeapp', name: 'noiseview', version: noiseViewVersion],
             // For some reason gradle cannot resolve version of this dependency and must be hardcoded in that way.
             androidAnimations      : "com.daimajia.androidanimations:library:$androidAnimationsVersion"
     ]
@@ -133,7 +137,6 @@ ext {
             [configuration: "implementation", dependency: libs.archLifecycleExtensions],
             [configuration: "annotationProcessor", dependency: libs.archLifecycleCompiler],
             // frontend
-            [configuration: "implementation", dependency: libs.ripple],
             [configuration: "implementation", dependency: libs.constrainLayout],
             [configuration: "implementation", dependency: libs.glide],
             [configuration: "implementation", dependency: libs.ripple],
@@ -144,6 +147,8 @@ ext {
             [configuration: "kapt", dependency: libs.glideCompiler],
             [configuration: "implementation", dependency: libs.particlesDrawable],
             [configuration: "implementation", dependency: libs.lottie],
+            [configuration: "implementation", dependency: libs.groupie],
+            [configuration: "implementation", dependency: libs.noiseView],
             // dependency injection
             [configuration: "implementation", dependency: libs.butterKnife],
             [configuration: "kapt", dependency: libs.butterKnifeCompiler],
@@ -226,7 +231,8 @@ ext {
             android_library    : 'com.android.library',
             android_application: 'com.android.application',
             kotlin_android     : 'kotlin-android',
-            kotlin             : 'kotlin'
+            kotlin             : 'kotlin',
+            kotlin_exten       : 'kotlin-android-extensions'
     ]
 
     applicationModulePlugins = [plugins.android_application, plugins.kotlin_android]
